--- a/src/lib/styles/global.scss
+++ b/src/lib/styles/global.scss
@@ -16,7 +16,7 @@
 
 html,
 body {
-	@apply h-screen m-0;
+	@apply m-0 h-screen;
 }
 
 body {
@@ -29,7 +29,7 @@ main,
 }
 
 #__next {
-	@apply relative bg-[url(/assets/svgs/wave.svg)] md:bg-left-bottom bg-left bg-no-repeat md:bg-contain bg-cover;
+	@apply relative bg-[url(/assets/svgs/wave.svg)] bg-cover bg-left bg-no-repeat md:bg-contain md:bg-left-bottom;
 }
 
 main {
@@ -37,13 +37,9 @@ main {
 }
 
 .button {
-	@apply flex items-center gap-2 px-4 py-2 rounded-2xl
-		bg-gray-100 cursor-pointer
-		md:text-xl text-base text-gray-600
-		border-2 border-gray-300
-		transition-colors ease-in-out;
+	@apply flex cursor-pointer items-center gap-2 rounded-2xl border-2 border-gray-300 bg-gray-100 px-4 py-2 text-base text-gray-600 transition-colors ease-in-out md:text-xl;
 
 	& span {
-		@apply lg:block hidden;
+		@apply hidden lg:block;
 	}
 }
