--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -117,58 +117,49 @@
 
 @layer base {
 	:root {
-		--background: 0 0% 100%;
-		--foreground: 222.2 84% 4.9%;
-		--card: 0 0% 100%;
-		--card-foreground: 222.2 84% 4.9%;
-		--popover: 0 0% 100%;
-		--popover-foreground: 222.2 84% 4.9%;
-		--primary: 221.2 83.2% 53.3%;
-		--primary-foreground: 210 40% 98%;
-		--secondary: 210 40% 96.1%;
-		--secondary-foreground: 222.2 47.4% 11.2%;
-		--muted: 210 40% 96.1%;
-		--muted-foreground: 215.4 16.3% 46.9%;
-		--accent: 210 40% 96.1%;
-		--accent-foreground: 222.2 47.4% 11.2%;
-		--destructive: 0 84.2% 60.2%;
-		--destructive-foreground: 210 40% 98%;
-		--border: 214.3 31.8% 91.4%;
-		--input: 214.3 31.8% 91.4%;
-		--ring: 221.2 83.2% 53.3%;
+		--background: 244 100% 95%;
+		--foreground: 244 5% 10%;
+		--card: 244 50% 90%;
+		--card-foreground: 244 5% 15%;
+		--popover: 244 100% 95%;
+		--popover-foreground: 244 100% 10%;
+		--primary: 244 54.5% 41.4%;
+		--primary-foreground: 0 0% 100%;
+		--secondary: 244 30% 70%;
+		--secondary-foreground: 0 0% 0%;
+		--muted: 206 30% 85%;
+		--muted-foreground: 244 5% 35%;
+		--accent: 206 30% 80%;
+		--accent-foreground: 244 5% 15%;
+		--destructive: 0 100% 30%;
+		--destructive-foreground: 244 5% 90%;
+		--border: 244 30% 50%;
+		--input: 244 30% 26%;
+		--ring: 244 54.5% 41.4%;
 		--radius: 0.75rem;
-		--chart-1: 12 76% 61%;
-		--chart-2: 173 58% 39%;
-		--chart-3: 197 37% 24%;
-		--chart-4: 43 74% 66%;
-		--chart-5: 27 87% 67%;
 	}
 
 	.dark {
-		--background: 222.2 84% 4.9%;
-		--foreground: 210 40% 98%;
-		--card: 222.2 84% 4.9%;
-		--card-foreground: 210 40% 98%;
-		--popover: 222.2 84% 4.9%;
-		--popover-foreground: 210 40% 98%;
-		--primary: 217.2 91.2% 59.8%;
-		--primary-foreground: 222.2 47.4% 11.2%;
-		--secondary: 217.2 32.6% 17.5%;
-		--secondary-foreground: 210 40% 98%;
-		--muted: 217.2 32.6% 17.5%;
-		--muted-foreground: 215 20.2% 65.1%;
-		--accent: 217.2 32.6% 17.5%;
-		--accent-foreground: 210 40% 98%;
-		--destructive: 0 62.8% 30.6%;
-		--destructive-foreground: 210 40% 98%;
-		--border: 217.2 32.6% 17.5%;
-		--input: 217.2 32.6% 17.5%;
-		--ring: 224.3 76.3% 48%;
-		--chart-1: 220 70% 50%;
-		--chart-2: 160 60% 45%;
-		--chart-3: 30 80% 55%;
-		--chart-4: 280 65% 60%;
-		--chart-5: 340 75% 55%;
+		--background: 244 50% 10%;
+		--foreground: 244 5% 90%;
+		--card: 244 50% 10%;
+		--card-foreground: 244 5% 90%;
+		--popover: 244 50% 5%;
+		--popover-foreground: 244 5% 90%;
+		--primary: 244 54.5% 41.4%;
+		--primary-foreground: 0 0% 100%;
+		--secondary: 244 30% 20%;
+		--secondary-foreground: 0 0% 100%;
+		--muted: 206 30% 25%;
+		--muted-foreground: 244 5% 60%;
+		--accent: 206 30% 25%;
+		--accent-foreground: 244 5% 90%;
+		--destructive: 0 100% 30%;
+		--destructive-foreground: 244 5% 90%;
+		--border: 244 30% 26%;
+		--input: 244 30% 26%;
+		--ring: 244 54.5% 41.4%;
+		--radius: 0.75rem;
 	}
 
 	* {
