--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -2,6 +2,7 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@plugin '@tailwindcss/typography';
 @plugin 'tailwind-scrollbar';
 @plugin 'tailwindcss-animate';
 
