--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -104,8 +104,28 @@
 	--border-md: calc(var(--radius) - 2px);
 	--border-sm: calc(var(--radius) - 4px);
 
+	--animate-accordion-down: accordion-down 0.2s ease-out;
+	--animate-accordion-up: accordion-up 0.2s ease-out;
 	--animate-shimmer-slide: shimmer-slide var(--speed) ease-in-out infinite alternate;
 	--animate-spin-around: spin-around calc(var(--speed) * 2) infinite linear;
+
+	@keyframes accordion-down {
+		from {
+			height: 0;
+		}
+		to {
+			height: var(--radix-accordion-content-height);
+		}
+	}
+
+	@keyframes accordion-up {
+		from {
+			height: var(--radix-accordion-content-height);
+		}
+		to {
+			height: 0;
+		}
+	}
 
 	@keyframes shimmer-slide {
 		to {
