--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -106,6 +106,7 @@
 
 	--animate-accordion-down: accordion-down 0.2s ease-out;
 	--animate-accordion-up: accordion-up 0.2s ease-out;
+	--animate-gradient: gradient 8s linear infinite;
 	--animate-shimmer-slide: shimmer-slide var(--speed) ease-in-out infinite alternate;
 	--animate-spin-around: spin-around calc(var(--speed) * 2) infinite linear;
 
@@ -124,6 +125,12 @@
 		}
 		to {
 			height: 0;
+		}
+	}
+
+	@keyframes gradient {
+		to {
+			background-position: var(--bg-size, 300%) 0;
 		}
 	}
 
